Fix alignment of Balanced Payments badge

--- a/scss/modules.scss
+++ b/scss/modules.scss
@@ -72,7 +72,6 @@ a.mini-user:hover {
     background-size: cover;
     width: 200px;
     height: 24px;
-    display: inline-block;
     float: right;
     margin-bottom: 5px;
     padding-left: 6pt;
