--- a/scss/responsiveness.scss
+++ b/scss/responsiveness.scss
@@ -36,10 +36,6 @@
         display: none !important;
     }
 
-    .accounts {
-        width: 400px;
-    }
-
     #hero {
         h2.top {
             font-size: 30px;
